...

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Medium Text"
                        android:id="@+id/channel_details_channelName"
                        android:layout_weight="2"
                        android:maxLines="1" />

                    <com.podonomy.podonomyplayer.ui.SubscribeCheckbox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/channel_details_subscribeCheckbox" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/channel_details_contentType"
                        android:src="?ic_volume_mute"/>

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
