...
    android:orientation="horizontal"
    android:background="@drawable/button">

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/subscriptions_subscriptions_list_view_item_channelImageButton" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="205dp"
        android:layout_height="80dp"
        android:weightSum="1">
...
